# Orbit_validation

./: .env.example  .gitignore  NOTICE  README.md  croissant.json  pyproject.toml
configs/neurips/ipi_swe_bench/: README.md
docs/: adding-a-scenario.md  architecture.md  conditions.md  configuration.md  dcop-collusion.md  evaluation.md  presets.md  scenarios.md  wrapper-usage.md
examples/: README.md  browserart_quick_test.yaml  browserart_single_agent.yaml  chain_compromised_agent.yaml  collusion_hospital.yaml  collusion_swe_bench.yaml  converse_basic.yaml  converse_benign_baseline.yaml  demo1_single_agent.yaml  demo2_specialist_dispatch.yaml  demo3_multistep_specialists.yaml  demo_multi_agent_attack_defense.yaml  osworld_benchmark_basic.yaml  osworld_benchmark_injection.yaml  per_agent_models_coding.yaml  redcode_gen_basic.yaml  redcode_gen_dual_llm.yaml  run_single_extension_task.sh  simple_no_sandbox.yaml  supervisor_workers_injection.yaml  swe_bench_codebase_injection.yaml  swe_bench_codebase_injection_dual_llm.yaml  swe_bench_multi_issue.yaml  tau2_airline_basic.yaml  tau2_airline_dual_llm.yaml  tau2_airline_mesh.yaml  tau2_airline_prompt_vaccination.yaml  tau2_airline_review.yaml  tau2_airline_solo.yaml  tau2_airline_supervisor.yaml  tau2_airline_tiered.yaml  tau2_cross_domain_handoff.yaml  tau2_retail_basic.yaml  tau2_telecom_small.yaml
examples/osharm_misuse_conditions/: 01_standalone.yaml  03_detailed_orchestrator_batch.yaml  05_orchestrator_specialized.yaml  06_mesh_delegation.yaml  07_star_cot.yaml  09_star_no_memory.yaml
examples/osharm_misuse_presets/: 01_standalone.yaml  02_orchestrator_batch.yaml  03_detailed_orchestrator_batch.yaml  04_stepwise_orchestrator.yaml  05_orchestrator_specialized.yaml  06_mesh_delegation.yaml  07_star_cot.yaml  08_star_shared_memory.yaml  09_star_no_memory.yaml
examples/test_variants/: collusion_browserart.yaml  jira_4dev_5task_aggressive.yaml  jira_6dev_8task_collusion.yaml  jira_high_scarcity.yaml  kit_smoke_agentharm.yaml  kit_smoke_redcode.yaml
examples/topologies/: README.md  converse_basic.yaml  converse_benign_baseline.yaml  converse_cross_session_propagation.yaml  converse_guardian_privacy.yaml  converse_guardian_security.yaml  converse_memory_poisoning.yaml  converse_monitor_privacy.yaml  converse_monitor_security.yaml  converse_privacy_only.yaml  converse_prompt_vaccination.yaml  converse_vaccination_security.yaml
orbit/: _registry.py
orbit/agents/: topologies.py
orbit/attacks/collusion/: collusion.py
orbit/configs/: execution.py  experiment.py  metrics.py  scenario.py  setup.py
orbit/defenses/: prompt_vaccination.py
orbit/examples/: simple_no_sandbox.yaml
orbit/execution/: agent_scheduler.py  topology_executor.py
orbit/scenarios/: conditions.py  factory.py  registry.py  requirements.py  shorthand.py
orbit/scenarios/agentharm/: README.md  condition_presets.py  config_builder.py  configs.py  dataset_builder.py  presets.py  prompts.py  task.py
orbit/scenarios/browser/browserart/: condition_presets.py  config_builder.py  configs.py  dataset_builder.py  fetch.py  preset_registry.py  presets.py  prompts.py  scorer.py  security_presets.py  task.py
orbit/scenarios/coding/bigcodebench/: condition_presets.py  config_builder.py  configs.py  dataset_builder.py  task.py
orbit/scenarios/coding/code_ipi/: condition_presets.py  config_builder.py  configs.py  task.py
orbit/scenarios/coding/redcode_gen/: condition_presets.py  config_builder.py  configs.py  dataset_builder.py  task.py
orbit/scenarios/coding/swe_bench/: condition_presets.py  config_builder.py  configs.py  dataset_builder.py  injection_scorer.py  preset_registry.py  prompts.py  task.py
orbit/scenarios/conditions/bigcodebench/: memory_full.yaml  memory_own_reasoning.yaml  mesh_delegation.yaml  mesh_delegation_cot.yaml  mesh_delegation_full.yaml  (+8 more)
orbit/scorers/: metrics.py  security_scorer.py
orbit/solvers/: orchestrator.py  orchestrator_v2.py  setup_solver.py
orbit/tasks/: builder.py  security_benchmark.py
orbit/validation/: validators.py
orbit/wrapper/: cli.py  preflight.py  runner.py
scripts/: README.md  _judge_utils.py  analyze_browserart_study.py  analyze_experiments.py  build_agentharm_data.py  build_demo_video.sh  check_browserart_errors.py  check_browserart_validity.py  check_discrepancy.py  check_errors.py  check_setup.py  check_validity.py  cloud_setup.sh  demo_prep.sh  demo_storyboard.md  fetch_browserart_data.py  fetch_redcode_data.py  gcp_monitor.sh  gcp_run.sh  generate_asr_heatmap.py  generate_figure1_teaser.py  generate_thought_virus_figure.py  generate_thought_virus_table.py  manim_scenes.py  render_architecture.py  render_architecture_v2.py  review_benign_logs.py  run_bigcodebench_experiments.py  run_bigcodebench_icml_experiments.py  run_collusion_experiments.py  run_collusion_fast.py  run_converse_cross_session.py  run_converse_sweep.py  run_defense_experiments.py  run_experiments.py  run_full_sweep.sh  run_full_sweep_remote.sh  run_icml_experiments.py  run_neurips_defense_experiments.py  run_osharm_experiments.py  (+8 more)
tests/: conftest.py  conftest_browserart_qa.py  test_agentharm.py  test_attacks.py  test_baselines_and_validation.py  test_bigcodebench.py  test_browserart.py  test_browserart_100_samples.py  test_browserart_autofetch.py  test_browserart_benign.py  test_browserart_preset_registry.py  test_browserart_qa_config.py  test_browserart_qa_prompts.py  test_code_ipi.py  test_codebase_injection.py  test_collusion.py  test_configs.py  test_construct_validity.py  test_converse.py  test_dcop_factory_e2e.py  test_dcop_roster_validation.py  test_dcop_setup_seeding.py  test_defenses.py  test_e2e_smoke.py  test_gcp_scripts.py  test_issue9_config_completeness.py  test_mas_judge_integration.py  test_oop_principles.py  test_orchestrator.py  test_orchestrator_v2.py  test_osworld.py  test_osworld_benchmark.py  test_preflight.py  test_preset_yaml_equivalence.py  test_prompt_vaccination.py  test_redcode_gen.py  test_scenario_kit_contracts.py  test_scenario_portability.py  test_scenario_requirements.py  test_scorers.py  (+7 more)
(+117 files in other folders)
