[project]
name = "orbit"
version = "0.1.0"
description = "Orbit: Multi-AI Agent Security Benchmark Toolkit built on Inspect AI"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [{name = "The Orbit Authors"}]
dependencies = [
    "inspect-ai>=0.3.74",
    "openai>=1.0",
    "pyyaml>=6.0",
    "click>=8.0",
    "pydantic>=2.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    # Pull in the DCOP solver dep (scipy) so the standard dev install can build
    # jira_ticket / meeting_scheduling problems -- otherwise their roster
    # reconciliation tests (and any real DCOP run) silently skip / ImportError.
    "orbit[dcop]",
]
langgraph = [
    "langgraph",
    "langchain-openai",
    "langsmith",
]
browserart = [
    "browsergym>=0.10.0",
    "starlette>=0.46",
    "anthropic>=0.30",
]
swebench = [
    "swebench>=3.0",
    "docker>=7.0",
]
bigcodebench = [
    # BigCodeBench reuses inspect_evals' HuggingFace dataset loader
    # (orbit/scenarios/coding/bigcodebench/dataset_builder.py). The base
    # inspect-evals package (no [osworld]) is enough; it pulls `datasets`.
    "inspect-evals",
    "datasets>=2.16",
]
dcop = [
    # Cooperative-allocation / DCOP. Only JiraTicket actually imports scipy
    # (Hungarian-algorithm optimum); Hospital/MeetSched/Colosseum run on core.
    "scipy>=1.11",
]
osworld = [
    "inspect-evals[osworld]",
    "python-docx>=1.0",
]
figures = [
    # Paper / report figure generation under scripts/ (render_architecture*.py,
    # generate_*_figure.py, analyze_*.py). Not imported by the orbit package
    # itself, so kept out of the core install.
    "matplotlib>=3.10.9",
    "pymupdf>=1.27.2.3",
]

[project.entry-points.inspect_ai]
orbit = "orbit._registry"

[project.scripts]
orbit = "orbit.wrapper.cli:cli"

[tool.setuptools.packages.find]
include = ["orbit*"]

[tool.setuptools.package-data]
# BrowserART: only the Orbit-original hbb_extension.json is redistributed.
# Upstream-derived hbb.json, hbb_benign.json, and hbb/behaviors.json are
# fetched via scripts/fetch_browserart_data.py — see
# orbit/scenarios/browserart/data/README.md.
"orbit.scenarios.browser.browserart.data" = ["hbb_extension.json", "README.md"]
"orbit.scenarios.coding.swe_bench._vendor" = ["LICENSE.inspect_evals"]
"orbit.scenarios.customer_service.tau2" = ["LICENSE.tau2"]
"orbit.scenarios.customer_service.tau2.data" = ["**/*.json", "**/*.md", "**/*.toml", "README.md"]
"orbit.scenarios.agentharm" = ["LICENSE.AgentHarm"]

[tool.pytest.ini_options]
markers = [
    "live: tests that require OPENAI_API_KEY and hit real APIs (deselect with: -m 'not live')",
]
addopts = "-m 'not live'"
asyncio_mode = "strict"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
